--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
   },
   "homepage": "https://github.com/pokt-network/pnp-aion#readme",
   "dependencies": {
-    "aion-web3": "0.0.3"
+    "aion-web3": "git@github.com:aionnetwork/aion_web3.git",
+    "ethereumjs-abi": "^0.6.5"
+  },
+  "devDependencies": {
+    "lerna": "^3.4.3",
+    "mocha": "^5.2.0"
   }
 }
