--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pnp-aion",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "An AION plugin for the Pocket Node app",
   "main": "lib/index.js",
   "scripts": {
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/pokt-network/pnp-aion#readme",
   "dependencies": {
-    "aion-web3": "https://github.com/aionnetwork/aion_web3.git",
+    "aion-web3": "https://github.com/aionnetwork/aion_web3.git#v1.0",
     "ethereumjs-abi": "^0.6.5",
     "lodash.padstart": "^4.6.1"
   },
